------------------

Added
~~~~~~~
- Relief feature selection.
- RankedSVM for multilabel classification.
- Multilabel workflow. All binary classifiers can now also be used
  for multilabel classification true a sklearn OneVsRestClassifier
  object.
- Multilabel performance metrics. Automatically used in plot_SVM
  when using multilabel workflow.
- Full oversampling of underrepresented classes.


Changed
~~~~~~~
- Reduced memory usage by not passing fitted objects, but just the
 (hyper)parameters.
- All metrics used in evaluation are now combined in a metrics
  script in the classification folder.
- Cleaned crossval function for readability.
- SVM hyperparameters are adjusted.
- GroupSel now has a separate Hyperparameter for all texture groups.

Fixed
~~~~~
- Catch error when validation set is too small.
- Logging of cross validation now works properly by removing previous
  log filehandles.
- Ordering of methods in the SearchCV preprocess function now
  corresponds with fitandscore.
- Bugs for multiclass predict in SearchCV and in plot_SVM
- Backend used in matplotlib is now agg, hence usage on platforms
  not supporting tkinter is now supported.


2.1.0 - 2018-08-09
------------------


Added
~~~~~

- PREDICT Exceptions in general.
- A PREDICT ValueError catch when fitting the classifiers has failed and thus
  output is missing.
- Feature imputation added in fitandscore. Made additions in scripts parsing
  these fields
  towards fitandscore.
- Logistic regression classifier.
- Ensemble performance computing in plot_SVM.
- Feature selection based on variance taking the mean of the features into
  account.
- Added PCA as feature selection method.
- Added plot_feature_groups function. Note that it's not used yet by default in
  the trainclassifier analysis
- Some more docstrings and cleaned some functions.
- Save the cv_iter object in the SearchCV so you can re-use the
  training/validation splits.
- Ensembling based on Caruana et al. 2004 in the SearchCV object.